--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "prettier": "3.3.3",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
