--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "!(*.js)": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "firebase": "^10.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
