--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.8.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.3",
