--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "firebase": "^10.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "styled-components": "^6.1.13"
   }
 }
