--- a/.gitignore
+++ b/.gitignore
@@ -87,9 +87,12 @@ web_modules/
 .next
 out
 
-# Nuxt.js build / generate output
+# Nuxt.js build / generate output, also a default webpack output
 .nuxt
-dist
+dist/*
+# for netlify SPA redirects to work
+!dist/_redirects
+
 
 # Gatsby files
 .cache/
